--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.2 (unreleased)
+
+** Don't link to libpam.
+
 * Version 1.1 (released 2008-06-10)
 
 ** Include simple.mk in distribution.
