--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,10 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
-* Version 1.3 (unreleased)
-
-** Use char* instead of uint8_t* for modhex functions.
+* Version 1.3 (released 2009-03-25)
 
 ** Add YUBIKEY_MODHEX_MAP.
+
+** Use char* instead of uint8_t* for modhex functions.
 
 * Version 1.2 (released 2009-01-13)
 
