--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.4 (unreleased)
+
 * Version 1.3 (released 2009-03-25)
 
 ** Add YUBIKEY_MODHEX_MAP.
