--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
-* Version 1.4 (unreleased)
+* Version 1.4 (released 2009-04-30)
 
 ** Improved instructions in README on how to build the package.
 
