--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
 * Version 1.5 (unreleased)
 
-** Added new APIs to check validity of hex/modex strings.
+** Added new APIs to check validity of hex/modhex strings.
 The APIs are yubikey_modhex_p and yubikey_hex_p.
 
 * Version 1.4 (released 2009-04-30)
