--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.6 (unreleased)
+
 * Version 1.5 (released 2008-09-31)
 
 ** The library now use a linker version script.
