--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,8 @@
+Initial author and current maintainer:
 Simon Josefsson <simon@yubico.com>
 
 For technical feedback, please consider using our forum:
 http://forum.yubico.com/
+
+Olov Danielson <olov@yubico.com>
+Worked on generate OTP functionality
