--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
+Please contact us via the mailing list yubico-devel@googlegroups.com
+or the forum: http://forum.yubico.com/
+
 Initial author and current maintainer:
 Simon Josefsson <simon@yubico.com>
-
-For technical feedback, please consider using our forum:
-http://forum.yubico.com/
 
 Olov Danielson <olov@yubico.com>
 Worked on generate OTP functionality
