--- a/README
+++ b/README
@@ -26,6 +26,13 @@ Yubico authentication device, the Yubikey.  In particular:
 
 * libyubikey.map: Linker version script.
 
+== License ==
+
+The project is licensed under a BSD license.  See the file COPYING for
+exact wording.  For any copyright year range specified as YYYY-ZZZZ in
+this package note that the range specifies every single year in that
+closed interval.
+
 == Building from version controlled sources ==
 
 Skip to the next section if you are using an official packaged
