--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
-* Version 1.8 (unreleased)
+* Version 1.8 (released 2012-03-13)
 
 ** modhex tool: Fix memory leak.
+
+** Fix insecure rpath.
 
 * Version 1.7 (released 2010-11-24)
 
