--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.10 (unreleased)
+
 * Version 1.9 (released 2012-05-31)
 
 ** Updated ld-version-script from gnulib to silence warnings.
