--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.11 (unreleased)
+
 * Version 1.10 (released 2013-03-12)
 
 ** Added ./configure --enable-gcc-warnings to enable a lot of warnings.
