--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Introduction
-============
+YubiKey C Library: libyubikey
+=============================
 
 This package make up the low-level C software development kit for the
 Yubico authentication device, the YubiKey.  In particular:
@@ -24,19 +24,31 @@ Yubico authentication device, the YubiKey.  In particular:
 
 * libyubikey.map: Linker version script.
 
-
 License
+-------
 
 The project is licensed under a BSD license.  See the file COPYING for
 exact wording.  For any copyright year range specified as YYYY-ZZZZ in
 this package note that the range specifies every single year in that
 closed interval.
 
+Building
+--------
+
+After downloading and unpacking the package tarball, you build it as
+follows.
+
+  $ ./configure
+  $ make check
+  $ sudo make install
+
+Another way to build the package is with a hand written short
+makefile, invoke using 'make -f simple.mk check'.  This is usually not
+recommended, and you will have to read simple.mk for further
+information.
 
 Building from version controlled sources
-
-Skip to the next section if you are using an official packaged
-version, which is what we recommend.
+----------------------------------------
 
 You may check out the sources using GIT with the following command:
 
@@ -52,60 +64,10 @@ don't want this step.  Generate the build system using:
 
   autoreconf --install
 
-
-Building
-
-To build using the Autoconf, automake and libtool infrastructure,
-which is recommend for more advanced purposes especially for
-cross-compilation and shared library support, build it as follows.
-
-  $ ./configure
-  $ make check && sudo make install
-
-Another way to build the package is by running 'make -f simple.mk
-check'.  It will build each component, and also test it.  See below
-for sample session.  This is useful if you want to target a platform
-that doesn't support Autoconf/automake/libtool well.
-
-  $ make -f simple.mk check
-  cc -I. -Wall -g   -c -o yktoken.o yktoken.c
-  cc -I. -Wall -g   -c -o ykmodhex.o ykmodhex.c
-  cc -I. -Wall -g   -c -o ykhex.o ykhex.c
-  cc -I. -Wall -g   -c -o ykcrc.o ykcrc.c
-  cc -I. -Wall -g   -c -o ykaes.o ykaes.c
-  cc -I. -Wall -g    modhex.c yktoken.o ykmodhex.o ykhex.o ykcrc.o ykaes.o yubikey.h   -o modhex
-  cc -I. -Wall -g    ykparse.c yktoken.o ykmodhex.o ykhex.o ykcrc.o ykaes.o yubikey.h   -o ykparse
-  cc -I. -Wall -g    selftest.c yktoken.o ykmodhex.o ykhex.o ykcrc.o ykaes.o yubikey.h   -o selftest
-  selftest.c: In function ‘main’:
-  selftest.c:163: warning: pointer targets in passing argument 3 of ‘yubikey_generate’ differ in signedness
-  ./yubikey.h:76: note: expected ‘char *’ but argument is of type ‘uint8_t *’
-  cc -I. -Wall -g    ykgenerate.c yktoken.o ykmodhex.o ykhex.o ykcrc.o ykaes.o yubikey.h   -o ykgenerate
-  ./selftest
-  modhex-encode("test") = ifhgieif
-  Modhex-1 success
-  modhex-decode("ifhgieif") = test
-  Modhex-2 success
-  hex-p("cbdefghijklnrtuv") = 1
-  Hex-3 success
-  hex-p("0123Xabc") = 0
-  Hex-3 success
-  hex-encode("test") = 74657374
-  Hex-1 success
-  hex-decode("74657374") = test
-  Hex-2 success
-  hex-p("0123456789abcdef") = 1
-  Hex-3 success
-  hex-p("0123Xabc") = 0
-  Hex-3 success
-  aes-decrypt (data=0123456789abcdef, key=abcdef0123456789)
-   => 838a467f34639551755bd32a4a2f15e1
-  AES-1 success
-  AES-2 success
-  OTP-1 success
-  $
-
+Then refer to the user sections above regarding building.
 
 Command-line tools
+------------------
 
 The "modhex" program converts data between modhex, normal hex, and
 binary form.
@@ -203,8 +165,3 @@ Example usage:
     crc: F0B8
     crc check: ok
   $
-
-
-Questions?
-
-Talk to <yubico-devel@googlegroups.com>.
