--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
 * Version 1.11 (unreleased)
 
+** Add man pages.
+
 * Version 1.10 (released 2013-03-12)
 
 ** Added ./configure --enable-gcc-warnings to enable a lot of warnings.
