--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
-* Version 1.11 (unreleased)
+* Version 1.11 (released 2013-10-18)
 
 ** Add man pages.
 
