--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-
 
+* Version 1.12 (unreleased)
+
 * Version 1.11 (released 2013-10-18)
 
 ** Add man pages.
